2007-02-26  Soeren Sonnenburg <Soeren.Sonnenburg@first.fraunhofer.de>

	* README.developer, base/Parallel.cpp, base/Parallel.h,
	  base/SGObject.h, base/SGObject.i, classifier/Classifier.cpp,
	  classifier/Classifier.h, classifier/Classifier.i,
	  classifier/PluginEstimate.cpp, classifier/svm/GNPPSVM.cpp,
	  classifier/svm/GPBTSVM.cpp, classifier/svm/GPBTSVM.h,
	  classifier/svm/LibSVM.cpp, classifier/svm/SVM.cpp,
	  classifier/svm/SVM.h, classifier/svm/SVM_light.cpp,
	  classifier/svm/gnpplib.cpp, distance/Distance.cpp,
	  distributions/Distribution.cpp, features/Alphabet.cpp,
	  features/CombinedFeatures.h, features/Features.cpp,
	  features/Labels.cpp, features/SimpleFeatures.h,
	  features/StringFeatures.h, gui/Matlab.cpp, gui/Octave.cpp,
	  gui/R.cpp, gui/TextGUI.cpp, guilib/GUIClassifier.cpp,
	  guilib/GUIDistance.cpp, guilib/GUIFeatures.cpp,
	  guilib/GUIHMM.cpp, guilib/GUIKernel.cpp, guilib/GUILabels.cpp,
	  guilib/GUIMath.cpp, guilib/GUIMatlab.cpp, guilib/GUIOctave.cpp,
	  guilib/GUIPluginEstimate.cpp, guilib/GUIPreProc.cpp,
	  guilib/GUIPython.cpp, guilib/GUISVM.cpp, guilib/GUITime.cpp,
	  kernel/CombinedKernel.cpp, kernel/CombinedKernel.h,
	  kernel/GaussianKernel.cpp, kernel/GaussianKernel.h,
	  kernel/Kernel.cpp, kernel/KernelMachine.cpp,
	  kernel/KernelMachine.h, lib/Array.h, lib/Cache.h, lib/Cplex.cpp,
	  lib/DynamicArray.h, lib/File.cpp, lib/Mathematics.cpp,
	  lib/Signal.cpp, lib/Signal.h, lib/SimpleFile.h, lib/Time.cpp,
	  lib/Trie.cpp, lib/io.cpp, lib/io.h, preproc/PreProc.cpp,
	  structure/DynProg.cpp: * introduced reference counted objects for
	  automagic swig object deallocation
	  * fixed a crasher bug in Array destructor
	  * updated developer readme
	  * added python signal handling: ctrl+c now raises a keyboard
	  exception if not
	  in a big loop. in big loops it asks whether to immediately
	  stop/prematurely stop
	  * fix crasher bugs (array out of bounds read/write) in
	  translate_from_single_order
	  