@@ -8,4 +8,4 @@ print f.get_feature(0,0)
 print f.get_feature(0,1)
 print f.get_feature(0,2)
 f.select_feature_vector(0)
-v=f.get_string()
+v=f.get_str()
