@@ -4,15 +4,7 @@
 
 #ifdef HAVE_PYTHON
 %include "lib/numpy.i"
-
 %apply (ST* IN_ARRAY2, INT DIM1, INT DIM2) {(ST* src, INT num_feat, INT num_vec)};
-%apply (CHAR* IN_ARRAY2, INT DIM1, INT DIM2) {(CHAR* src, INT num_feat, INT num_vec)};
-%apply (BYTE* IN_ARRAY2, INT DIM1, INT DIM2) {(BYTE* src, INT num_feat, INT num_vec)};
-%apply (WORD* IN_ARRAY2, INT DIM1, INT DIM2) {(WORD* src, INT num_feat, INT num_vec)};
-%apply (SHORT* IN_ARRAY2, INT DIM1, INT DIM2) {(SHORT* src, INT num_feat, INT num_vec)};
-%apply (INT* IN_ARRAY2, INT DIM1, INT DIM2) {(INT* src, INT num_feat, INT num_vec)};
-%apply (DREAL* IN_ARRAY2, INT DIM1, INT DIM2) {(DREAL* src, INT num_feat, INT num_vec)};
-%apply (ULONG* IN_ARRAY2, INT DIM1, INT DIM2) {(ULONG* src, INT num_feat, INT num_vec)};
 #endif
 
 %include "features/SimpleFeatures.h" 
