@@ -2,7 +2,12 @@
  #include "features/WordFeatures.h" 
 %}
 
-%include "features/SimpleFeatures.i"
+#ifdef HAVE_PYTHON
+%include "lib/numpy.i"
+%apply (WORD* IN_ARRAY2, INT DIM1, INT DIM2) {(WORD* src, INT num_feat, INT num_vec)};
+%apply (WORD** ARGOUT2, INT* DIM1, INT* DIM2) {(WORD** dst, INT* d1, INT* d2)};
+#endif
+
 %include "features/WordFeatures.h" 
 
 #ifdef HAVE_PYTHON
